front - wrap rich text field in expand panel, to prevent long text from taking to much space

--- a/angular/src/app/component/rich-text-field/rich-text-field.component.scss
+++ b/angular/src/app/component/rich-text-field/rich-text-field.component.scss
@@ -10,6 +10,5 @@
 }
 
 .edit-button {
-  display: inline-block;
-  margin: 0 auto;
+  margin: 0 0 0 auto;
 }
